test/errors/ERR.tec
! TECO test: Test ERR error !
! Commands: ?ERR !
! Requirements: None !
! Execution: Standard !
! Expect: ?ERR [ERR.log] !

@^UA{/dev/foo}                      ! Name of output file !

@EW/^EQA/                           ! Test: open file for write !
